<?xml version="1.0"?>
<package>
  <name>razbot2_gazebo</name>
  <version>0.0.1</version>
  <description>RazBot Simulator bringup</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>razbot2_control</run_depend>
  <run_depend>razbot2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
